--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
     <footer>
       <div>© <span id="y"></span> babazada.com</div>
-     <!-- < div style="font-family:var(--mono);">built with plain HTML · hosted on GitHub Pages</div--> -->
+     <!-- < div style="font-family:var(--mono);">built with plain HTML · hosted on GitHub Pages</div--> 
     </footer>
   </div>
 
